Update SixSq company description

--- a/about/about-us.html
+++ b/about/about-us.html
@@ -19,10 +19,10 @@ redirect_from:
 					</div>
           <div class="col-md-8 col-sm-6 col-xs-12" >
             <h2>SixSq</h2>
-            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud and edge solutions which allow companies and institutions to benefit from the latest technologies in a secure and scalable way. Its smart cloud-in-a-box appliance, NuvlaBox®, is a simple plug & play solution which brings customers a private cloud at an affordable price. It also plays an intrinsic part in smart city and IoT strategies. SixSq’s smart multi-cloud and edge management platform, Nuvla®, offers application deployment from a single, simple dashboard. Nuvla® is powered by SlipStream®, the company’s cloud management platform, which allows users to deploy any application in any cloud or at the edge.</p>
-            <p>SixSq’s active participation in numerous international cloud initiatives has solidified its reputation as a leading European cloud expert.</p>
-            <p>The company's strategic partnerships ensure a global reach, allowing it to help its customers build powerful vertical solutions and deliver significant benefits.</p>
-            <p>At the end of 2014, the company entered into a partnership with the RHEA Group, a leading supplier of systems engineering services and software solutions to the Aerospace and Security industries.</p>
+            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud and edge computing solutions to companies and institutions in a secured and scalable way. Our smart edge computing solution, <a href="/nuvlabox">NuvlaBox®</a>, is a cloud-in-a-box delivered as a simple plug & play appliance for near data processing.</p>
+            <p>Using by the <a href="/nuvla">Nuvla™</a> service, our multi-cloud management platform, users can manage clouds and edge devices, including their hosted applications, at scale. Further, Nuvla ensures out of the box and end-to-end security at an affordable price. Nuvla can also be deployed on premise, providing a complete private solution.</p>
+            <p>Packaged in the <a href="/nuvlacity">NuvlaCity</a> solution, Nuvla and NuvlaBox can play an intrinsic part in any smart city and IoT strategies.</p>
+            <p>SixSq is a member of the <a href="http://rheagroup.com">RHEA</a> Group, a leading supplier of systems engineering services and software solutions to the Aerospace and Security industries.</p>
           </div>
 				</div>
       </div>
