update address and phone

--- a/about/contact.html
+++ b/about/contact.html
@@ -18,7 +18,7 @@ redirect_from:
             <h2>We're here to help!</h2>
             <p>If you have any questions, would like to give feedback or request a demo of our products, you can call, email, snail mail or even turn up in person.</p>
 						<ul>
-							<li class="fw400"><i class="fas fa-phone"></i>  info/support: +41 22 54 41 733</li>
+							<li class="fw400"><i class="fas fa-phone"></i>  info/support: +41 22 980 95 80</li>
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
 						</ul>
@@ -30,7 +30,7 @@ redirect_from:
                 <h4 class="mb-20">
       						<ul>
       							<li>SixSq</li>
-      							<li>Rue du Bois-du-Lan, 8</li>
+      							<li>Route de Meyrin 267</li>
       							<li>1217, Meyrin, Geneva</li>
       							<li>Switzerland</li>
       						</ul>
