--- a/about/jobs.html
+++ b/about/jobs.html
@@ -1,9 +1,11 @@
 ---
-title: Join Our Amazing Team
+title: Join Our Amazing Team and become a Software Artisan of Scale
 layout: jobs
 product: about
 class: jobs
 category: about
 product-name: Jobs
-summary: Our team of software artisans and innovators is our most precious asset. Do you have what it takes to be part of the adventure?
+summary: Our team of software developers and innovators is our most precious asset. Do you have what it takes to be part of the adventure?
+redirect_from:
+ - /jobs/
 ---
