--- a/about/contact.html
+++ b/about/contact.html
@@ -35,8 +35,14 @@ redirect_from:
       							<li>Switzerland</li>
       						</ul>
                 </h4>
-                <h4>Directions:</h4>
-                <p>It's easy to get to the SixSq offices. We are located about 15 minutes from Geneva International Airport and from Geneva Cornavin central railway station. To take public transport from the airport to the venue, you catch bus 23 (direction ZIPLO) or 28 (direction Parfumerie) to Blandonnet then change to tram 18 (direction CERN), getting off at the stop Bois-du-Lan. Once you get off  the tram, you will see a brown building with the words “Geneux Dancet” in yellow lettering on the roof. The SixSq offices are located on the 3rd floor of this building.</p>
+                <h3>Directions:</h3>
+                <p>It's easy to get to the SixSq offices.  We are located about 15 minutes from the Geneva International Airport and from the Geneva Cornavin central railway station.</p>
+                <h4>By public transport:</h4>
+                <p>From the airport, take the bus 23 (direction ZIPLO) or 28 (direction Parfumerie) to Blandonnet, then change to tram 18 (direction CERN), getting off at the stop Bois-du-Lan.</p>
+                <p>From the train central train station, simply take the tram 18 (direction CERN), getting off at the stop Bois-du-Lan.</p>
+                <p>Once you get off the tram, you will see the Bacardi/Martini site. Next to the carwash, on the same road as the tram, in the hedge, you will find the pedestrian gate. Ring Tradall to have the gate openned. Our building is on the right, first floor.</p>
+                <h4>By car:</h4>
+                <p>Enter the Bacardi/Martini site from the gate on rue du Bois-du-Lan. Ring Tradall to have the gate openned. Then drive to the front of the second building. We are on the first floor.</p>
               </div>
               <div class="col-md-6">
     		        <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.ch/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=SixSq,+Meyrin&amp;aq=0&amp;oq=sixsq&amp;sll=47.377455,8.536715&amp;sspn=0.261082,0.228996&amp;ie=UTF8&amp;hq=SixSq,&amp;hnear=Meyrin,+Geneva&amp;t=m&amp;ll=46.229461,6.079216&amp;spn=0.01425,0.027466&amp;z=15&amp;iwloc=A&amp;output=embed">
