--- a/about/about-us.html
+++ b/about/about-us.html
@@ -19,10 +19,12 @@ redirect_from:
 					</div>
           <div class="col-md-8 col-sm-6 col-xs-12" >
             <h2>SixSq</h2>
-            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud and edge computing solutions to companies and institutions in a secured and scalable way. Our smart edge computing solution, <a href="/nuvlabox">NuvlaBox®</a>, is a cloud-in-a-box delivered as a simple plug & play appliance for near data processing.</p>
-            <p>Using by the <a href="/nuvla">Nuvla™</a> service, our multi-cloud management platform, users can manage clouds and edge devices, including their hosted applications, at scale. Further, Nuvla ensures out of the box and end-to-end security at an affordable price. Nuvla can also be deployed on premise, providing a complete private solution.</p>
-            <p>Packaged in the <a href="/nuvlacity">NuvlaCity</a> solution, Nuvla and NuvlaBox can play an intrinsic part in any smart city and IoT strategies.</p>
-            <p>SixSq is a member of the <a href="http://rheagroup.com">RHEA</a> Group, a leading supplier of systems engineering services and software solutions to the Aerospace and Security industries.</p>
+            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud neutral solutions which allow companies and institutions to benefit from cloud computing while avoiding lock-in. Its smart cloud-in-a-box appliance, <a href="/nuvlabox">NuvlaBox®</a>, is a simple plug & play edge solution which provides customers with a private cloud at an affordable price as well as playing an intrinsic part of smart city and IoT strategies. 
+
+<p>SixSq’s smart multi-cloud and hybrid-cloud management platform, <a href="/nuvla">Nuvla™</a>, offers containerized application deployment from a single, simple dashboard. SixSq’s active participation in numerous international cloud initiatives has solidified its reputation as a leading European cloud and edge computing expert.<p>
+
+<p>The SixSq team, which consists of highly skilled software engineers, developers and system administrators from many different countries, is based in Geneva, Switzerland, and embraces the Swiss ideals of excellence, innovation and precision.<p>
+				
           </div>
 				</div>
       </div>
