Small update to About Us page

--- a/about/about-us.html
+++ b/about/about-us.html
@@ -51,7 +51,7 @@ redirect_from:
         </div>
         <div class="col-md-8 col-sm-6 col-xs-12" >
           <h2>Charles Loomis</h2>
-          <p>Cal is Chief Technical Officer and one of the founding partners of SixSq. He trained as a high-energy physicist and worked for nine years on major physics experiments at Fermilab and CERN. He also worked in European computing technology projects for CNRS in France. For SixSq, he has been instrumental in the design of Nuvla, the company’s flagship product. He is passionate about creating clean, elegant solutions which are a pleasure to use.
+          <p>Cal is one of the founding partners of SixSq. He trained as a high-energy physicist and worked for nine years on major physics experiments at Fermilab and CERN. He also worked in European computing technology projects for CNRS in France. For SixSq, he has been instrumental in the design of Nuvla, the company’s flagship product. He is passionate about creating clean, elegant solutions which are a pleasure to use.
           </p>
         </div>
       </div>
