WIP partnership program

--- a/about/contact.html
+++ b/about/contact.html
@@ -68,7 +68,7 @@ redirect_from:
               </div>
               <div class="col-md-6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2797.3408226421693!2d-73.69644434847407!3d45.48308107899864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc917930085dbaf%3A0x735d509b7894e753!2s6700+Chemin+de+la+C%C3%B4te-de-Liesse+%23102%2C+Saint-Laurent%2C+QC+H4T+2B5%2C+Canada!5e0!3m2!1sen!2sch!4v1475689894837" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                <small>
+                <small id="get-in-touch" >
                   <a href="https://www.google.ch/maps/place/6700+Chemin+de+la+C%C3%B4te-de-Liesse+%23102,+Saint-Laurent,+QC+H4T+2B5,+Canada/@45.4830811,-73.6964443,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc917930085dbaf:0x735d509b7894e753!8m2!3d45.4830811!4d-73.6942503?hl=en" style="color:#0000FF;text-align:left"><p/>View Larger Map</a>
                 </small>
               </div>
