--- a/about/about-us.html
+++ b/about/about-us.html
@@ -8,6 +8,7 @@ title: Discover SixSq and Our Team
 summary: We are software artisans, passionate about craftsmanship, DevOps and all the rigor required to build efficient and dependable software products and services.
 redirect_from:
  - /about-us/
+ - /about/
 ---
 
   <section class="section-about">
