--- a/about/contact.html
+++ b/about/contact.html
@@ -18,7 +18,7 @@ redirect_from:
             <h2>We're here to help!</h2>
             <p>If you have any questions, would like to give feedback or request a demo of our products, you can call, email, snail mail or even turn up in person.</p>
 						<ul>
-							<li class="fw400"><i class="fas fa-phone"></i>  info/support: +41 22 980 95 80</li>
+              <!-- <li class="fw400"><i class="fas fa-phone"></i>  info/support: +41 22 980 95 80</li> -->
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
 							<li class="fw400"><i class="fas fa-envelope"></i>  <a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
 						</ul>
@@ -26,7 +26,6 @@ redirect_from:
 					<div class="col-md-12 item icon animated">
             <div class="row focus-need">
               <div class="col-md-6">
-    						<h2>Headquarters:</h2>
                 <h4 class="mb-20">
       						<ul>
       							<li>SixSq</li>
@@ -53,7 +52,7 @@ redirect_from:
         		  </div>
 				    </div>
 			    </div>
-					<div class="col-md-12 item icon animated mt-30 mb-30">
+          <!-- <div class="col-md-12 item icon animated mt-30 mb-30">
             <div class="row focus-need">
               <div class="col-md-6">
                 <h2>North American Headquarters:</h2>
@@ -73,7 +72,7 @@ redirect_from:
                 </small>
               </div>
             </div>
-          </div>
+          </div> -->
 					<div class="col-md-12 item icon animated mt-30 mb-30">
             <div id="contact-us-form" class="anchor"></div>
             <div class="container spacy dark">
