--- a/about/about-us.html
+++ b/about/about-us.html
@@ -44,7 +44,7 @@ redirect_from:
         </div>
       </div>
     </div>
-  <div class="container focus-need">
+  <!-- <div class="container focus-need">
     <div class="item icon animated mt-20 mb-20">
       <div class="row">
         <div class="col-md-4 col-sm-6 col-xs-12">
@@ -57,7 +57,7 @@ redirect_from:
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
 
 <!--    <div class="container">
