--- a/media/webinar.html
+++ b/media/webinar.html
@@ -27,7 +27,7 @@ redirect_from:
             <h4 class="pb-10">This webinar is composed of two main parts:</h4>
             <ul class="bulleted-list pb-10">
               <li>Introduction of the edge. What are the main criteria for choosing the edge? Examples where the edge makes a big difference and bring amazing outcomes (20 mins).</li>
-              <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step by step demo of how to create an edge device, we call a <a href="/nuvlabox">NuvlaBox</a>. And then how to manage it securely, how to deploy and update containerised applications in it (30 mins).</li>
+              <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step by step demo of how to create an edge device, we call a <a href="/nuvlabox">NuvlaBox</a>. And then how to manage it securely, how to deploy and update containerised applications in it (30 mins).</li>.
             </ul>
             <p class="pb-10">We will keep 10 minutes at the end to answer participants questions, unless we take the questions during the webinar.</p>
             <h4 class="pb-10">The webinar will be delivered by:</h4>
@@ -44,7 +44,7 @@ redirect_from:
 				<div class="row">
 					<div class="col-md-2">
           </div>
-					<div class="col-md-8 col-sm-12 col-xs-12 pb-10 pt-20 text-center">
+					<div class="col-md-8 col-sm-12 col-xs-12 pb-20 pt-20 text-center">
             <h3>One participant will win a NuvlaBox starter kit :-)</h3>
             <h3>We will announce the winner at the end of the webinar.</h3>
           </div>
@@ -52,6 +52,10 @@ redirect_from:
           </div>
 				</div>
 				<div class="row">
+					<div class="col-md-6 col-sm-12 col-xs-12">
+						<h3 style="color: #9B1313;">Join our next 1 hour interactive webinar:</h3>
+						<h4 style="color: #9B1313;">Thursday January 16 at 16:00 CET (Geneva/Paris)</h4>
+          </div>
 					<div class="col-md-6 col-sm-12 col-xs-12 newsletter nopadding">
             <!--[if lte IE 8]>
             <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
