--- a/media/webinar.html
+++ b/media/webinar.html
@@ -53,8 +53,8 @@ redirect_from:
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-sm-12 col-xs-12">
-						<h3 style="color: #9B1313;">Join our next 1 hour interactive webinar:</h3>
-						<h4 style="color: #9B1313;">Thursday January 16 at 16:00 CET (Geneva/Paris)</h4>
+						<h3 class="pb-10 pt-10" style="color: #9B1313;">Join our next 1 hour interactive webinar:</h3>
+						<h4 class="" style="color: #9B1313;">Thursday January 16 at 16:00 CET (Geneva/Paris)</h4>
           </div>
 					<div class="col-md-6 col-sm-12 col-xs-12 newsletter nopadding">
             <!--[if lte IE 8]>
