--- a/media/webinar.html
+++ b/media/webinar.html
@@ -24,10 +24,10 @@ redirect_from:
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-sm-12 col-xs-12">
-            <h4 class="pb-10">This webinar is composed of two main parts:</h4>
+            <h4 class="pb-10">This webinar is composed of two parts:</h4>
             <ul class="bulleted-list pb-10">
               <li>Introduction of the edge. What are the main criteria for choosing the edge? Examples where the edge makes a big difference and bring amazing outcomes (20 mins).</li>
-              <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step by step demo of how to create an edge device, we call a <a href="/nuvlabox">NuvlaBox</a>. And then how to manage it securely, how to deploy and update containerised applications in it (30 mins).</li>.
+              <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step by step demo of how to create an edge device, we call a <a href="/nuvlabox">NuvlaBox</a>. And then how to manage it securely, how to deploy and update containerised applications in it (30 mins).</li>
             </ul>
             <p class="pb-10">We will keep 10 minutes at the end to answer participants questions, unless we take the questions during the webinar.</p>
             <h4 class="pb-10">The webinar will be delivered by:</h4>
@@ -69,6 +69,11 @@ redirect_from:
             </script>
 						<div class="clearfix"></div>
 					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+					  <p>Note: we will only use your email for the purpose of this webinar. After the event, your email will be deleted from our database.</p>
+          </div>
 				</div>
 			</div>
 		</section>
