--- a/media/webinar.html
+++ b/media/webinar.html
@@ -25,13 +25,13 @@ redirect_from:
 				<div class="row">
 					<div class="col-md-6 col-sm-12 col-xs-12">
             <h4 class="pb-10">This webinar is composed of two parts:</h4>
-            <ul class="bulleted-list pb-10">
+            <ol class="ordered-list pb-10" style="padding-left: 20px;">
               <li>Introduction of the edge. What are the main criteria for choosing the edge? Examples where the edge makes a big difference and bring amazing outcomes (20 mins).</li>
               <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step by step demo of how to create an edge device, we call a <a href="/nuvlabox">NuvlaBox</a>. And then how to manage it securely, how to deploy and update containerised applications in it (30 mins).</li>
-            </ul>
+            </ol>
             <p class="pb-10">We will keep 10 minutes at the end to answer participants questions, unless we take the questions during the webinar.</p>
             <h4 class="pb-10">The webinar will be delivered by:</h4>
-            <ul class="bulleted-list pb-10">
+            <ul class="bulleted-list pb-10" style="padding-left: 20px;">
               <li>Our host: Louise Merifield, Co-founder and Operations and Communication Manager</li>
               <li>Edge Overview: Marc-Elian Bégin (Meb), Co-founder and CEO</li>
               <li>Hands-on demo: Cristovao Cordeiro, R&D Projects Technical Manager</li>
