--- a/media/webinar.html
+++ b/media/webinar.html
@@ -17,19 +17,19 @@ redirect_from:
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12 pb-10 pt-20 text-center">
-						<h2 class="fw700 pb-10">Edge and Nuvla.io Webinar</h2>
-            <h4 class="pb-10 pt-10">What is the edge? Why it matters? And is there a simple, yet secure and scalable way to start my journey to the edge?</h4>
-            <h4 class="pb-40 pt-10">These are questions we will answer. This one hour webinar is the place to learn, interact and discover, with SixSq experts.</h4>
+						<h2 class="fw700 pb-10">Edge Computing and Nuvla.io Webinar</h2>
+            <h4 class="pb-10 pt-10">What is the edge? Why does it matter? And is there a simple, yet secure and scalable way to start your journey to the edge?</h4>
+            <h4 class="pb-40 pt-10">These are questions we will tackle during this one-hour webinar where you will learn, interact and discover, with SixSq experts.</h4>
           </div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-sm-12 col-xs-12">
             <h4 class="pb-10">This webinar is composed of two parts:</h4>
             <ol class="ordered-list pb-10" style="padding-left: 20px;">
-              <li>Introduction of the edge. What are the main criteria for choosing the edge? Examples where the edge makes a big difference and bring amazing outcomes (20 mins).</li>
-              <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step by step demo of how to create an edge device, we call a <a href="/nuvlabox">NuvlaBox</a>. And then how to manage it securely, how to deploy and update containerised applications in it (30 mins).</li>
+              <li>Introduction to the edge. What are the main criteria for choosing the edge? Including examples where edge computing makes a big difference and brings amazing outcomes. (20 mins)</li>
+              <li>Hands-on demo of <a href="https://nuvla.io">Nuvla.io</a>, our SaaS edge management platform. This more technical part demystifies the edge, and walks you through a step-by-step demo of how to configure an edge device. For the demo we use SixSq's <a href="/nuvlabox">NuvlaBox</a>. You will also learn how to manage the device securely and how to deploy and update containerised AI applications within it. (30 mins)</li>
             </ol>
-            <p class="pb-10">We will keep 10 minutes at the end to answer participants questions, unless we take the questions during the webinar.</p>
+            <p class="pb-10">Questions are welcome during the webinar and we will keep 10 minutes at the end to cover any additional queries.</p>
             <h4 class="pb-10">The webinar will be delivered by:</h4>
             <ul class="bulleted-list pb-10" style="padding-left: 20px;">
               <li>Our host: Louise Merifield, Co-founder and Operations and Communication Manager</li>
