--- a/about/about-us.html
+++ b/about/about-us.html
@@ -1,5 +1,5 @@
 ---
-layout: plain
+layout: about-us
 product: about
 class: about-us
 category: about
@@ -13,78 +13,12 @@ redirect_from:
 
   <section class="section-about">
 		<div class="container focus-need">
-      <div class="item icon animated mt-20 mb-20">
-				<div class="row">
-					<div class="col-md-4 col-sm-6 col-xs-12">
-            <img style="width: 50%;" src="/img/logo/logo_sixsq.png" alt="logo-sixsq"/>
-					</div>
-          <div class="col-md-8 col-sm-6 col-xs-12" >
-            <h2>SixSq</h2>
-            <p>SixSq was founded in August 2007 by 3 partners. The company provides cloud neutral solutions which allow companies and institutions to benefit from cloud computing while avoiding lock-in. Its smart cloud-in-a-box appliance, <a href="/nuvlabox">NuvlaBox®</a>, is a simple plug & play edge solution which provides customers with a private cloud at an affordable price as well as playing an intrinsic part of smart city and IoT strategies. 
-
-<p>SixSq’s smart multi-cloud and hybrid-cloud management platform, <a href="/nuvla">Nuvla™</a>, offers containerized application deployment from a single, simple dashboard. SixSq’s active participation in numerous international cloud initiatives has solidified its reputation as a leading European cloud and edge computing expert.<p>
-
-<p>The SixSq team, which consists of highly skilled software engineers, developers and system administrators from many different countries, is based in Geneva, Switzerland, and embraces the Swiss ideals of excellence, innovation and precision.<p>
-				
-          </div>
-				</div>
+      <div class="item animated mt-20 mb-20">
+        <p>SixSq was founded in August 2007 by 3 partners. The company provides the edge-to-cloud management platform <a href="/nuvla.io">Nuvla.io</a>, which allow companies and institutions to deploy a secure and comprehensive edge and cloud strategy, while avoiding lock-in.</p>
+        <p>Most of our software is open source.</p>
+        <p>The <a href="/nuvlabox">NuvlaBox®</a> software turns any x86 or ARM hardware platform into a smart edge device. Think of NuvlaBox as the Linux or Windows of edge devices (in fact it is based on Linux). Nuvla.io also provides a Private App Store, with the same convenience as Apple's App Store, but for deploying apps at the edge and in the cloud. As long as your app is containerised, you can deploy it with Nuvla.io, in a click! It's as easy to use!</p>
+        <p>We believe Nuvla.io will accelerate AI deployment at the edge and take away management complexity, while giving you full control over your data.</p>
+        <p>Our customers us it to deploy <a href="/retail">retail</a>, <a href="/factory">factory</a>, <a href="/outpost">outpost</a>, <a href="/city">smart city</a> and <a href="/scienctific">scientific</a> applications. What will you do with it? <a href="/about/contact">Let us know</a>.</p>
       </div>
 		</div>
-    <div class="container focus-need">
-      <div class="item icon animated mt-20 mb-20">
-        <div class="row even">
-          <div class="col-md-8 col-sm-6 col-xs-12" >
-            <h2>Marc-Elian Bégin</h2>
-            <p>Marc-Elian Bégin is CEO and one of the three original co-founders of SixSq. He holds a B.Eng. in Mechanical Engineering, specialising in Aerospace, from Ecole Polytechnique of Montreal and has been working in the software industry since 1994. During this time, he has worked with the Canadian and European Space Agencies, as well as CERN, on distributed software systems, grid and cloud computing development projects. In 2007, inspired by a drive to evangelise cloud computing, he realised one of his dreams and founded SixSq with 2 other partners. His current focus is edge computing technologies, DevOps and hybrid cloud solutions. With SixSq software and an amazing team, he builds smart city solutions and open data access to deliver real and tangible benefits to society. He regularly talks at local, national and international events, such as CeBIT, Swiss Open Cloud Day and CloudStack Collaboration Conference. Marc-Elian enjoys living and working in Geneva, Switzerland, while trying to keep up with his two fast-growing sons.
-            </p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <img src="/img/content/meb-photo.jpg" alt="marcelian-begin"/>
-          </div>
-        </div>
-      </div>
-    </div>
-  <!-- <div class="container focus-need">
-    <div class="item icon animated mt-20 mb-20">
-      <div class="row">
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <img src="/img/content/cal-photo.jpg" alt="cal-loomis"/>
-        </div>
-        <div class="col-md-8 col-sm-6 col-xs-12" >
-          <h2>Charles Loomis</h2>
-          <p>Cal is one of the founding partners of SixSq. He trained as a high-energy physicist and worked for nine years on major physics experiments at Fermilab and CERN. He also worked in European computing technology projects for CNRS in France. For SixSq, he has been instrumental in the design of Nuvla, the company’s flagship product. He is passionate about creating clean, elegant solutions which are a pleasure to use.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div> -->
-</section>
-
-<!--    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-      <h2>Software Artisans</h2>
-          <p>We are software artisans, passionate about software development and technologies. We have learned our trade writing a lot of software. We also enjoy reducing software, using refactoring, or contributing to other's good ideas, such that we do not have to write so much ourselves.
-
-      We hope you enjoy, or will enjoy, using our software; we also hope that you will help us through feedback write
-      better software and continue build the best applications we possibly can.</p>
-
-      <h2>Mission Statement</h2>
-      <h4>(read between the lines...)</h4>
-      <h3>
-      <center>
-        <div id="mission" style="line-height: 150%;">
-          <div title="Python, Clojure, patterns, TCP, REST, unit tests, that elusive bug... we love it all">We love software.</div>
-          <div title="We understand cloud, it's cool, useful and a real game changer, but it's part of the path, not a destination">We walk on clouds, but we don't fall through.</div>
-          <div title="With more nationalities and human languages spoken than the number of employees, our country is Earth and we like Switzerland ;-)">We are citizens of planet Earth.</div>
-          <div title="The very original idea behind our name and logo... we take complexity head on, so that you don't have to... just stay in the slipstream!">Let's box IT complexity into a red square.</div>
-          <div title="The IT industry is plagued with repetitive, boring and mindless tasks... We declared war on those and our favourite weapon is indeed automation. What's left is more time to be creative and making a real difference">Automation is cool.</div>
-          <div title="The satisfaction of seeing a program work for you instead of the opposite is just so much fun">It's fun to do.</div>
-          <div title="As a result, we create and support powerful, simple and fun to use tools, services and appliances so that you can also take advantage of our hard work">So you can benefit too.</div>
-        </div>
-      </center>
-      </h3>
-    </div>
-     </div>
-  </div>
-   -->
+	</section>
