--- a/about/about-us.html
+++ b/about/about-us.html
@@ -18,7 +18,7 @@ redirect_from:
         <p>Most of our software is open source.</p>
         <p>The <a href="/nuvlabox">NuvlaBox®</a> software turns any x86 or ARM hardware platform into a smart edge device. Think of NuvlaBox as the Linux or Windows of edge devices (in fact it is based on Linux). Nuvla.io also provides a Private App Store, with the same convenience as Apple's App Store, but for deploying apps at the edge and in the cloud. As long as your app is containerised, you can deploy it with Nuvla.io, in a click! It's as easy to use!</p>
         <p>We believe Nuvla.io will accelerate AI deployment at the edge and take away management complexity, while giving you full control over your data.</p>
-        <p>Our customers us it to deploy <a href="/retail">retail</a>, <a href="/factory">factory</a>, <a href="/outpost">outpost</a>, <a href="/city">smart city</a> and <a href="/scienctific">scientific</a> applications. What will you do with it? <a href="/about/contact">Let us know</a>.</p>
+        <p>Our customers us it to deploy <a href="/retail">retail</a>, <a href="/factory">factory</a>, <a href="/outpost">outpost</a>, <a href="/city">smart city</a> and <a href="/science">scientific</a> applications. What will you do with it? <a href="/about/contact">Let us know</a>.</p>
         <p>Creating complex and sophisticated software like Nuvla and NuvlaBox and operating services like Nuvla.io is not trivial. We pour all our passion and energy in writing the best software possible. We hope you'll have as much fun using our products and services as we have creating them. If you do, please tell us, and if we're not meeting you're expectations, we'd really appreciate you share your thoughts.</p>
       </div>
 		</div>
