--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: welcome
 twitter-image: /img/logo/logo_sixsq.png
-title: Smart and secure cloud and edge software solutions for IoT, Smart City and Big Data
+title: Smart and secure edge management platform and service for Retail, IoT, IIoT, Outpost, Smart City and Big Data
 redirect_from:
  - /products_and_services/
 ---
