switch back to scss

--- a/about/about-us.html
+++ b/about/about-us.html
@@ -11,7 +11,7 @@ redirect_from:
  - /about/
 ---
 
-  <section class="section-about">
+  <section>
 		<div class="container focus-need">
       <div class="item animated mt-20 mb-20">
         <p>SixSq was founded in August 2007 by 3 partners. The company provides the edge-to-cloud management platform <a href="/nuvla.io">Nuvla.io</a>, which allow companies and institutions to deploy a secure and comprehensive edge and cloud strategy, while avoiding lock-in.</p>
