--- a/about/jobs.html
+++ b/about/jobs.html
@@ -9,3 +9,6 @@ summary: Our team of software developers and innovators is our most precious ass
 redirect_from:
  - /jobs/
 ---
+
+### We currently have no openings. But we regularly update our need for amazing talent.
+{: style="padding-top: 100px; text-align: center;"}
