--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: welcome
 twitter-image: /img/logo/logo_sixsq.png
 title: Smart and secure edge management platform and service for Retail, IoT, IIoT, Outpost, Smart City and Big Data
 header: We enable AI at the edge, as a Service
-subheader: Take control of your data at the edge, we take away the pain of running your own management platform.
+subheader: You take control of your data at the edge, we take away the pain of running your own management platform.
 header-action: Discover Nuvla.io
 ---
