--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ twitter-image: /img/logo/logo_sixsq.png
 title: Smart and secure edge management platform and service for Retail, IoT, IIoT, Outpost, Smart City and Big Data
 header: We enable AI at the edge, as a Service
 subheader: You take control of your data at the edge, we take away the pain of running your own management platform.
+summary: We enable AI at the edge, as a Service - You take control of your data at the edge, we take away the pain of running your own management platform
 header-action: Discover Nuvla.io
 ---
