--- a/about/about-us.html
+++ b/about/about-us.html
@@ -11,7 +11,7 @@ redirect_from:
  - /about/
 ---
 
-#### SixSq was founded in August 2007 by 3 partners. The company provides the edge-to-cloud management platform [Nuvla.io](/nuvla.io), which allow companies and institutions to deploy a secure and comprehensive edge and cloud strategy, while avoiding lock-in.
+#### SixSq was founded in August 2007 by 3 partners. The company provides the edge-to-cloud management platform [Nuvla.io](/nuvla.io), which allows companies and institutions to deploy a secure and comprehensive edge and cloud strategy, while avoiding lock-in.
 
 #### Most of our software is open source.
 
@@ -19,6 +19,6 @@ redirect_from:
 
 #### We believe Nuvla.io will accelerate AI deployment at the edge and take away management complexity, while giving you full control over your data.
 
-#### Our customers us it to deploy [retail](/casestudies/retail/overview), [outpost](/casestudies/outpost/overview), [smart city](/casestudies/city/overview), and [science](/casestudies/science/overview) applications. What will you do with it? [Let us know](/about/contact).
+#### Our customers use it to deploy [retail](/casestudies/retail/overview), [outpost](/casestudies/outpost/overview), [smart city](/casestudies/city/overview), and [science](/casestudies/science/overview) applications. What will you do with it? [Let us know](/about/contact).
 
 #### Creating complex and sophisticated software like Nuvla and NuvlaBox and operating services like Nuvla.io is not trivial. We pour all our passion and energy in writing the best software possible. We hope you'll have as much fun using our products and services as we have creating them. If you do, please tell us, and if we're not meeting you're expectations, we'd really appreciate you share your thoughts.
