--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 layout: welcome
 twitter-image: /img/logo/logo_sixsq.png
 title: Smart and secure edge management platform and service for Retail, IoT, IIoT, Outpost, Smart City and Big Data
-header: We enable AI at the edge, as a Service
-subheader: You take control of your data at the edge, we take away the pain of running your own management platform.
+header: Complete edge-to-cloud solution, as a Service
+subheader: Container native, cloud neutral and hardware agnostic
 summary: We enable AI at the edge, as a Service - You take control of your data at the edge, we take away the pain of running your own edge management platform
 header-action: Discover Nuvla.io
 ---
+
+We have integrated all the key features you need to manage your edge and cloud solution, including security, apps deployment life cycle, peripherals management, invoicing and payments, etc.
