Add sub menu for Nuvla.io. Small changes to text on homepage

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: welcome
 twitter-image: /img/logo/logo_sixsq.png
 title: Smart and secure edge management platform and service for Retail, IoT, IIoT, Outpost, Smart City and Big Data
-header: Complete edge-to-cloud solution, as a Service
-subheader: Container native, cloud neutral and hardware agnostic
+header: Complete edge-to-cloud platform and marketplace, as a Service
+subheader: Turn computers into edge devices connected to a powerful app store
 summary: We enable AI at the edge, as a Service - You take control of your data at the edge, we take away the pain of running your own edge management platform
 header-action: Discover Nuvla.io
 ---
