--- a/about/jobs.html
+++ b/about/jobs.html
@@ -1,14 +1,11 @@
 ---
-title: Join Our Amazing Team and become a Software Artisan of Scale
+title: Join Our Amazing Team and help deliver the Edge-to-Cloud Computing Revolution
 layout: jobs
 product: about
 class: jobs
 category: about
 product-name: Jobs
-summary: Our team of software developers and innovators is our most precious asset. Do you have what it takes to be part of the adventure?
+summary: Our people is our most precious asset. Do you have what it takes to be part of the adventure?
 redirect_from:
  - /jobs/
 ---
-
-### We currently have no openings. But we regularly update our need for amazing talent.
-{: style="padding-top: 100px; text-align: center;"}
