--- a/about/jobs.html
+++ b/about/jobs.html
@@ -5,7 +5,7 @@ product: about
 class: jobs
 category: about
 product-name: Jobs
-summary: Our people is our most precious asset. Do you have what it takes to be part of the adventure?
+summary: Our people are our most precious asset. Do you have what it takes to be part of the adventure?
 redirect_from:
  - /jobs/
 ---
