--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: welcome
 twitter-image: /img/logo/logo_sixsq.png
-title: Smart and secure edge management platform and service for Retail, IoT, IIoT, Outpost, Smart City and Big Data
-header: Complete edge-to-cloud platform and marketplace, as a Service
-subheader: Turn computers into edge devices connected to a powerful app store
+title: Edge management platform and marketplace of business applications for Retail, Transport, Manufacturing, Telcos, IoT, IIoT, Outpost, Smart City and Big Data
+header: SixSq is a leader in Edge Computing B2B SaaS
+subheader: We deliver a future proof, application centric, cloud neutral and hardware agnostic solution, as a Service
 summary: We enable AI at the edge, as a Service - You take control of your data at the edge, we take away the pain of running your own edge management platform
 header-action: Discover Nuvla.io
 ---
