--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: welcome
 twitter-image: /img/logo/logo_sixsq.png
 title: Edge management platform and marketplace of business applications for Retail, Transport, Manufacturing, Telcos, IoT, IIoT, Outpost, Smart City and Big Data
 header: SixSq is a leader in Edge Computing B2B SaaS
-subheader: We deliver a future proof, application centric, cloud neutral and hardware agnostic solution, as a Service
+subheader: We deliver a future proof, application centric, cloud neutral and hardware agnostic platform, as a Service
 summary: We enable AI at the edge, as a Service - You take control of your data at the edge, we take away the pain of running your own edge management platform
 header-action: Discover Nuvla.io
 ---
