--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Edge management platform and marketplace of business applications for Ret
 header: SixSq is a leader in Edge Computing B2B SaaS
 subheader: We deliver a future proof, application centric, cloud neutral and hardware agnostic platform, as a Service
 summary: We enable AI at the edge, as a Service - You take control of your data at the edge, we take away the pain of running your own edge management platform
-header-action: Discover Nuvla.io
+header-action: Go to Nuvla.io
 ---
 
 We have integrated all the key features you need to manage your edge and cloud solution, including security, apps deployment life cycle, peripherals management, invoicing and payments, etc.
